force-app/main/default/objects/SFDC_Conference__c/SFDC_Conference__c.object-meta.xml
<CustomObject>
    <description>Track conference details, whether your company attended, the speakers and their topics, and if any competitors attended, too.</description>
    <label>Conference</label>
    <nameField>
        <label>Conference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>