force-app/main/default/objects/SFDC_Conference__c/fields/Conference_Type__c.field-meta.xml
<CustomField>
    <fullName>Conference_Type__c</fullName>
    <label>Conference Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00-General</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Anaesthesiology</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Chiropractics</fullName>
            </value>
            <value>
                <fullName>Clinical Pharmacology</fullName>
            </value>
            <value>
                <fullName>Dental &amp; Oral Disorders</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Diagnostic Radiology</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Gatroenterology</fullName>
            </value>
            <value>
                <fullName>General Medicine</fullName>
            </value>
            <value>
                <fullName>Genetics</fullName>
            </value>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>