force-app/main/default/objects/SFDC_Conference__c/fields/Multicorp_Status__c.field-meta.xml
<CustomField>
    <fullName>Multicorp_Status__c</fullName>
    <label>Multicorp Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attending Only</fullName>
            </value>
            <value>
                <fullName>Exhibiting</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>Not Attending</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>