force-app/main/default/objects/SFDC_Conference__c/listViews/AllConferences.listView-meta.xml
<ListView>
    <fullName>AllConferences</fullName>
    <columns>NAME</columns>
    <columns>Conference_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Multicorp_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Conferences</label>
</ListView>