force-app/main/default/objects/SFDC_Conference__c/listViews/ConferencesHostAttendExhibiting.listView-meta.xml
<ListView>
    <fullName>ConferencesHostAttendExhibiting</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Conference_Type__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Multicorp_Status__c</field>
        <operation>equals</operation>
        <value>Attending Only,Exhibiting,Hosting</value>
    </filters>
    <label>Conferences - Host, Attend, Exhibiting</label>
</ListView>