force-app/main/default/objects/SFDC_Conference__c/listViews/ConferencesUndecided.listView-meta.xml
<ListView>
    <fullName>ConferencesUndecided</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Conference_Type__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Multicorp_Status__c</field>
        <operation>equals</operation>
        <value>Undecided</value>
    </filters>
    <label>Conferences - Undecided</label>
</ListView>